--- a/templates/CustomFormOverride/argocd/argoproj.io.v1alpha1.appprojects.yaml
+++ b/templates/CustomFormOverride/argocd/argoproj.io.v1alpha1.appprojects.yaml
@@ -2,13 +2,12 @@
 apiVersion: front.in-cloud.io/v1alpha1
 kind: CustomFormsOverride
 metadata:
-  name: default-apps.v1.deployments
+  name: default-argoproj.io.v1alpha1.appprojects
 spec:
-  customizationId: "default-/apps/v1/deployments"
+  customizationId: "default-/argoproj.io/v1alpha1/appprojects"
   hidden:
     {{ include "incloud-web-resources.customformoverride.hidden.metadata.system" . | nindent 4 }}
     {{ include "incloud-web-resources.customformoverride.hidden.metadata.api" . | nindent 4 }}
     {{ include "incloud-web-resources.customformoverride.hidden.status" . | nindent 4 }}
-    {{ include "incloud-web-resources.customformoverride.hidden.metadata.system.template" . | nindent 4 }}
   schema: {}
   strategy: merge
