--- a/templates/CustomFormOverride/batch.v1.jobs.yaml
+++ b/templates/CustomFormOverride/batch.v1.jobs.yaml
@@ -9,5 +9,6 @@ spec:
     {{ include "incloud-web-resources.customformoverride.hidden.metadata.system" . | nindent 4 }}
     {{ include "incloud-web-resources.customformoverride.hidden.metadata.api" . | nindent 4 }}
     {{ include "incloud-web-resources.customformoverride.hidden.status" . | nindent 4 }}
+    {{ include "incloud-web-resources.customformoverride.hidden.metadata.system.template" . | nindent 4 }}
   schema: {}
   strategy: merge
