--- a/templates/CustomFormOverride/v1.persistentvolumeclaims.yaml
+++ b/templates/CustomFormOverride/v1.persistentvolumeclaims.yaml
@@ -2,13 +2,12 @@
 apiVersion: front.in-cloud.io/v1alpha1
 kind: CustomFormsOverride
 metadata:
-  name: default-apps.v1.deployments
+  name: default-v1.persistentvolumeclaims
 spec:
-  customizationId: "default-/apps/v1/deployments"
+  customizationId: "default-/v1/persistentvolumeclaims"
   hidden:
     {{ include "incloud-web-resources.customformoverride.hidden.metadata.system" . | nindent 4 }}
     {{ include "incloud-web-resources.customformoverride.hidden.metadata.api" . | nindent 4 }}
     {{ include "incloud-web-resources.customformoverride.hidden.status" . | nindent 4 }}
-    {{ include "incloud-web-resources.customformoverride.hidden.metadata.system.template" . | nindent 4 }}
   schema: {}
   strategy: merge
