--- a/templates/CustomFormOverride/v1.services copy.yaml
+++ b/templates/CustomFormOverride/v1.services copy.yaml
@@ -2,13 +2,12 @@
 apiVersion: front.in-cloud.io/v1alpha1
 kind: CustomFormsOverride
 metadata:
-  name: default-apps.v1.deployments
+  name: default-apiextensions.k8s.io.v1.customresourcedefinitions
 spec:
-  customizationId: "default-/apps/v1/deployments"
+  customizationId: "default-/apiextensions.k8s.io/v1/customresourcedefinitions"
   hidden:
-    {{ include "incloud-web-resources.customformoverride.hidden.metadata.system" . | nindent 4 }}
+    {{ include "incloud-web-resources.customformoverride.hidden.metadata.system-clusterscope" . | nindent 4 }}
     {{ include "incloud-web-resources.customformoverride.hidden.metadata.api" . | nindent 4 }}
     {{ include "incloud-web-resources.customformoverride.hidden.status" . | nindent 4 }}
-    {{ include "incloud-web-resources.customformoverride.hidden.metadata.system.template" . | nindent 4 }}
   schema: {}
   strategy: merge
