--- a/templates/Factory/crd-details.yaml
+++ b/templates/Factory/crd-details.yaml
@@ -133,14 +133,21 @@ spec:
                                   gap: 8
                                 children:
                                   {{ include "incloud-web-resources.factory.labels" . | nindent 34 }}
-                              # Annotations counter
+
+                              # Annotations counter block
                               - type: antdFlex
                                 data:
-                                  id: annotations-counter-block
+                                  id: ds-annotations
                                   vertical: true
                                   gap: 4
                                 children:
-                                  {{ include "incloud-web-resources.factory.counters.annotations" . | nindent 30 }}
+                                  {{ include "incloud-web-resources.factory.counters.object.fields" (dict
+                                      "jsonPath" ".metadata.annotations"
+                                      "type" "annotations"
+                                      "title" "Annotations"
+                                    ) | nindent 34
+                                  }}
+
                               # Creation time
                               - type: antdFlex
                                 data:
