--- a/templates/Factory/argocd-application-details.yaml
+++ b/templates/Factory/argocd-application-details.yaml
@@ -132,13 +132,20 @@ spec:
                                   gap: 8
                                 children:
                                   {{ include "incloud-web-resources.factory.labels" . | nindent 42}}
+                              # Annotations counter block
                               - type: antdFlex
                                 data:
-                                  id: annotations-counter-block
+                                  id: ds-annotations
                                   vertical: true
                                   gap: 4
                                 children:
-                                  {{ include "incloud-web-resources.factory.counters.annotations" . | nindent 38}}
+                                  {{ include "incloud-web-resources.factory.counters.object.fields" (dict
+                                      "jsonPath" ".metadata.annotations"
+                                      "type" "annotations"
+                                      "title" "Annotations"
+                                    ) | nindent 34
+                                  }}
+
                               - type: antdFlex
                                 data:
                                   id: created-time-block
