--- a/templates/Factory/deployment-details.yaml
+++ b/templates/Factory/deployment-details.yaml
@@ -211,14 +211,19 @@ spec:
                                     ) | nindent 34
                                   }}
 
-                              # Annotations counter (rendered by include)
+                              # Annotations counter block
                               - type: antdFlex
                                 data:
-                                  id: annotations-block
+                                  id: ds-annotations
                                   vertical: true
                                   gap: 4
                                 children:
-                                  {{ include "incloud-web-resources.factory.counters.annotations" . | nindent 34 }}
+                                  {{ include "incloud-web-resources.factory.counters.object.fields" (dict
+                                      "jsonPath" ".metadata.annotations"
+                                      "type" "annotations"
+                                      "title" "Annotations"
+                                    ) | nindent 34
+                                  }}
 
                               # Created timestamp (rendered by include)
                               - type: antdFlex
