--- a/templates/Factory/secret-details.yaml
+++ b/templates/Factory/secret-details.yaml
@@ -141,14 +141,19 @@ spec:
                                 children:
                                   {{ include "incloud-web-resources.factory.labels" . | nindent 38}}
 
-                              # Annotations
+                              # Annotations counter block
                               - type: antdFlex
                                 data:
-                                  id: meta-annotations-block
+                                  id: ds-annotations
                                   vertical: true
                                   gap: 4
                                 children:
-                                  {{ include "incloud-web-resources.factory.counters.annotations" . | nindent 38}}
+                                  {{ include "incloud-web-resources.factory.counters.object.fields" (dict
+                                      "jsonPath" ".metadata.annotations"
+                                      "type" "annotations"
+                                      "title" "Annotations"
+                                    ) | nindent 34
+                                  }}
 
                               # Created timestamp
                               - type: antdFlex
