Update aqua plugin

--- a/templates/Factory/pod-details.yaml
+++ b/templates/Factory/pod-details.yaml
@@ -540,6 +540,7 @@ spec:
                   podName: "{reqsJsonPath[0]['.metadata.name']['-']}"
                   substractHeight: 400
 
+{{- if .Values.addons.trivy.enabled }}
           # ------ PODS TAB ------
           - key: reports
             label: Reports
@@ -562,3 +563,4 @@ spec:
                     - 0
                     - report
                     - vulnerabilities
+{{- end -}}
